--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
-{
-  "name": "xero-quote-puppeteer",
-  "version": "1.0.0",
-  "main": "sendQuote.js",
-  "scripts": {
-    "start": "node sendQuote.js"
-  },
-  "dependencies": {
-    "puppeteer": "^22.8.2"
-  }
+"scripts": {
+  "start": "node sendQuote.js"
+},
+"dependencies": {
+  "puppeteer": "^22.8.2",
+  "express": "^4.18.2"
 }
